Fix small misalignment in footer

--- a/maqueta/app/assets/less/comuns/footer.less
+++ b/maqueta/app/assets/less/comuns/footer.less
@@ -142,7 +142,7 @@ FOOTER
 		.col-2{
 			display: inline-block;
 			overflow:auto;
-			margin:0px 0px 32px 0px;
+			margin:0px 0px 36px 0px;
 		}
 
 		@media (max-width: @screen-xs-max) {
